# substrate-suri-ffi

./: Cargo.toml  README.md
docs/: substrate-game-integration.md
src/: lib.rs
